feat: add scoreboard component

--- a/src/app/jokenpo-game/jokenpo-game/jokenpo-game.component.html
+++ b/src/app/jokenpo-game/jokenpo-game/jokenpo-game.component.html
@@ -1,1 +1,5 @@
-<p>jokenpo-game works!</p>
+<app-scoreboard
+    [firstPlayer]="this.gameConfigs.firstPlayer"
+    [secondPlayer]="this.gameConfigs.secondPlayer"
+    scoreboardTitle="Jokenpo Match"
+></app-scoreboard>
