--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,2 +1,7 @@
 // Colors
-$gray_light: #FAF7F7;
+$gray_light: #faf7f7;
+$gray_shadow: #eaeaea;
+$gray_card: #fcfcfc;
+$black: #333333;
+$red: #e23333;
+$primary_color: #673ab7;
