--- a/src/app/shared/scoreboard/scoreboard.component.html
+++ b/src/app/shared/scoreboard/scoreboard.component.html
@@ -5,10 +5,20 @@
     <mat-card-content>
         <div class="row">
             <div class="col">
-                <mat-card-subtitle>First Player: {{ firstPlayer.username }}</mat-card-subtitle>
+                <mat-card-subtitle class="scoreboard__subtitle"
+                    >First Player: {{ firstPlayer.username }}</mat-card-subtitle
+                >
+                <mat-card-subtitle class="scoreboard__subtitle">{{
+                    firstPlayer.playerType
+                }}</mat-card-subtitle>
             </div>
             <div class="col">
-                <mat-card-subtitle>Second Player: {{ secondPlayer.username }}</mat-card-subtitle>
+                <mat-card-subtitle class="scoreboard__subtitle"
+                    >Second Player: {{ secondPlayer.username }}</mat-card-subtitle
+                >
+                <mat-card-subtitle class="scoreboard__subtitle">{{
+                    secondPlayer.playerType
+                }}</mat-card-subtitle>
             </div>
         </div>
         <div class="row">
