--- a/src/app/shared/scoreboard/scoreboard.component.scss
+++ b/src/app/shared/scoreboard/scoreboard.component.scss
@@ -6,6 +6,10 @@
     margin: 32px auto;
     padding: 16px 32px;
 
+    &__subtitle {
+        text-transform: capitalize;
+    }
+
     &__header {
         justify-content: center;
     }
