--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -21,6 +21,12 @@ body {
     margin-right: 20px;
 }
 
+.display-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .col:last-child {
     margin-right: 0;
 }
