--- a/src/app/shared/hands-carousel/hands-carousel.component.html
+++ b/src/app/shared/hands-carousel/hands-carousel.component.html
@@ -2,8 +2,8 @@
     <h1>{{ carouselTitle }}</h1>
     <h3>{{ carouselSubtitle }}</h3>
 
-    <ngb-carousel>
-        <ng-template ngbSlide *ngFor="let hand of hands">
+    <ngb-carousel #carousel>
+        <ng-template ngbSlide *ngFor="let hand of hands" [id]="hand.name">
             <div class="wrapper carousel">
                 <img [src]="hand.avatarImgUrl" class="image" [alt]="'Hand image' + hand.name" />
             </div>
