feat: add delayPerRound feature

--- a/src/app/welcome/welcome-form/welcome-form.component.html
+++ b/src/app/welcome/welcome-form/welcome-form.component.html
@@ -78,6 +78,17 @@
                         />
                     </mat-form-field>
                 </div>
+                <div class="col">
+                    <mat-form-field>
+                        <input
+                            matInput
+                            type="number"
+                            min="0"
+                            placeholder="Delay between each round, in milliseconds"
+                            formControlName="delayPerRoundInMs"
+                        />
+                    </mat-form-field>
+                </div>
             </div>
         </mat-card-content>
         <mat-card-actions>
