--- a/src/app/welcome/welcome-form/welcome-form.component.html
+++ b/src/app/welcome/welcome-form/welcome-form.component.html
@@ -82,6 +82,7 @@
                     <mat-form-field>
                         <input
                             matInput
+                            class="full-width"
                             type="number"
                             min="0"
                             placeholder="Delay between each round, in milliseconds"
