--- a/src/app/jokenpo-game/jokenpo-game/jokenpo-game.component.scss
+++ b/src/app/jokenpo-game/jokenpo-game/jokenpo-game.component.scss
@@ -1,10 +1,5 @@
 .jokenpo-game {
-    &__button-toggle {
-        margin: 0 auto;
-    }
-
-    &__icon {
-        width: 24px;
-        height: auto;
-    }
+    max-width: 450px;
+    margin: 32px auto;
+    text-align: center;
 }
