--- a/src/app/jokenpo-game/jokenpo-game/jokenpo-game.component.scss
+++ b/src/app/jokenpo-game/jokenpo-game/jokenpo-game.component.scss
@@ -1,5 +1,8 @@
 .jokenpo-game {
-    max-width: 450px;
-    margin: 32px auto;
-    text-align: center;
+    margin-bottom: 80px;
+    &__end-game {
+        max-width: 450px;
+        margin: 32px auto;
+        text-align: center;
+    }
 }
