--- a/src/app/jokenpo-game/jokenpo-panel/jokenpo-panel.component.scss
+++ b/src/app/jokenpo-game/jokenpo-panel/jokenpo-panel.component.scss
@@ -1,3 +1,5 @@
+@import '../../../scss/mixins.scss';
+
 .jokenpo-panel {
     &__button-toggle {
         margin: 0 auto;
@@ -6,5 +8,11 @@
     &__icon {
         width: 24px;
         height: auto;
+    }
+    .col {
+        order: 2;
+    }
+    .col:nth-child(2) {
+        order: 1;
     }
 }
