test: add tests to jokenpo game

--- a/src/app/jokenpo-game/jokenpo-game/jokenpo-game.component.html
+++ b/src/app/jokenpo-game/jokenpo-game/jokenpo-game.component.html
@@ -1,4 +1,4 @@
-<div class="jokenpo-game">
+<div class="jokenpo-game" *ngIf="firstPlayer">
     <app-jokenpo-panel
         [firstPlayer]="this.firstPlayer"
         [secondPlayer]="this.secondPlayer"
