--- a/src/app/shared/hands-carousel/hands-carousel.component.html
+++ b/src/app/shared/hands-carousel/hands-carousel.component.html
@@ -2,10 +2,10 @@
     <h1>{{ carouselTitle }}</h1>
     <h3>{{ carouselSubtitle }}</h3>
 
-    <ngb-carousel #carousel>
+    <ngb-carousel #carousel data-testid="carousel-hands">
         <ng-template ngbSlide *ngFor="let hand of hands" [id]="hand.name">
-            <div class="wrapper carousel">
-                <img [src]="hand.avatarImgUrl" class="image" [alt]="'Hand image' + hand.name" />
+            <div class="wrapper carousel" [attr.data-testid]="'carousel-' + hand.name">
+                <img [src]="hand.avatarImgUrl" class="image" [alt]="'Hand image ' + hand.name" />
             </div>
         </ng-template>
     </ngb-carousel>
