feat: add docs link on footer

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,3 +1,6 @@
 <footer class="footer">
-    <mat-toolbar color="secondary"> Made by Adrian Lemes </mat-toolbar>
+    <mat-toolbar color="secondary">
+        Made by Adrian Lemes. Check my documentation
+        <a href="https://jokenpo-adrian-docs.netlify.app/">here </a>
+    </mat-toolbar>
 </footer>
