style: update style file

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,6 +9,10 @@ body {
     background: $gray_light;
 }
 
+.full-width {
+    width: 100%;
+}
+
 .row {
     display: flex;
     flex-direction: row;
