fix: update footer responsiviness

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <mat-toolbar color="secondary">
-        Made by Adrian Lemes. Check my documentation
-        <a href="https://jokenpo-adrian-docs.netlify.app/" target="_blank">here</a>
+        Check the
+        <a href="https://jokenpo-adrian-docs.netlify.app/" target="_blank">docs</a>
     </mat-toolbar>
 </footer>
