style: add a color to a variable

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,5 +3,6 @@ $gray_light: #faf7f7;
 $gray_shadow: #eaeaea;
 $gray_card: #fcfcfc;
 $black: #333333;
+$white: #fff;
 $red: #e23333;
 $primary_color: #673ab7;
