--- a/src/app/shared/hands-carousel/hands-carousel.component.scss
+++ b/src/app/shared/hands-carousel/hands-carousel.component.scss
@@ -1,3 +1,5 @@
+@import '../../../scss/variables.scss';
+
 .carousel {
     margin: 16px auto 8px;
     text-align: center;
@@ -11,7 +13,7 @@
         left: 15%;
         padding-top: 1.25rem;
         padding-bottom: 1.25rem;
-        color: #fff;
+        color: $white;
         text-align: center;
     }
 
